# idit

./: .gitignore  README.md  pyproject.toml  sample.py  train.py
src/idit/: config.py  model.py  sampler.py  shared.py  trainer.py
tests/: test_config.py  test_path.py  test_shared.py
