[project]
name = "idit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "einops>=0.8.2",
    "huggingface-hub>=1.8.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyright>=1.1.408",
    "ruff>=0.15.8",
    "safetensors>=0.7.0",
    "sympy>=1.14.0",
    "torch>=2.11.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.3",
]

[project.scripts]
idit = "idit:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 160

[dependency-groups]
dev = ["dotenv>=0.9.9", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.8"]
[project.optional-dependencies]
cuda = ["torch", "torchvision", "triton ; sys_platform != 'win32' and sys_platform != 'darwin'", "triton-windows ; sys_platform == 'win32'"]
cpu = ["torch", "torchvision"]
mps = ["torch", "torchvision"]
dev = ["dotenv>=0.9.9", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.8"]

[tool.uv]
prerelease = "allow"
preview = true

conflicts = [[{ extra = "cpu" }, { extra = "mps" }, { extra = "cuda" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torchvision = [{ index = "pytorch-cpu", extra = "mps", marker = "sys_platform == 'darwin'" }, { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin'" }]
torch = [{ index = "pytorch-cpu", extra = "mps", marker = "sys_platform == 'darwin'" }, { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin'" }]
